force-app/main/default/objects/Vyuha_Formation__mdt/Vyuha_Formation__mdt.object-meta.xml
<CustomObject>
    <description>Definition rules for a Vyuha Formation</description>
    <label>Vyuha Formation</label>
    <pluralLabel>Vyuha Formations</pluralLabel>
</CustomObject>