force-app/main/default/objects/Vyuha_Formation__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Job is Active</description>
    <inlineHelpText>Indicates if Job is Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>