force-app/main/default/objects/Vyuha_Formation__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Batch Size for Work - max 200</description>
    <inlineHelpText>Batch Size for Work - max 200</inlineHelpText>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>