force-app/main/default/objects/Vyuha_Formation__mdt/fields/Day_1__c.field-meta.xml
<CustomField>
    <fullName>Day_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>