force-app/main/default/objects/Vyuha_Formation__mdt/fields/Day_2__c.field-meta.xml
<CustomField>
    <fullName>Day_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>