force-app/main/default/objects/Vyuha_Formation__mdt/fields/Day_3__c.field-meta.xml
<CustomField>
    <fullName>Day_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>