force-app/main/default/objects/Vyuha_Formation__mdt/fields/Enable_Bulk_Flow__c.field-meta.xml
<CustomField>
    <fullName>Enable_Bulk_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the execution of flow with multiple IDs</description>
    <inlineHelpText>Enables the execution of flow with multiple IDs</inlineHelpText>
    <label>Enable Bulk Flow</label>
    <type>Checkbox</type>
</CustomField>