force-app/main/default/objects/Vyuha_Formation__mdt/fields/Flow_Input_Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Input_Variable_Name__c</fullName>
    <description>Name (case sensitive) for input variable assignment into flow</description>
    <inlineHelpText>Name (case sensitive) for input variable assignment into flow</inlineHelpText>
    <label>Flow Input Variable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>