force-app/main/default/objects/Vyuha_Formation__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Name of Flow to execute Formation Work</description>
    <inlineHelpText>Name of Flow to execute Formation Work</inlineHelpText>
    <label>Flow Interview Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>