force-app/main/default/objects/Vyuha_Formation__mdt/fields/Hour_10__c.field-meta.xml
<CustomField>
    <fullName>Hour_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10:00</label>
    <type>Checkbox</type>
</CustomField>