force-app/main/default/objects/Vyuha_Formation__mdt/fields/Hour_11__c.field-meta.xml
<CustomField>
    <fullName>Hour_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>11:00</label>
    <type>Checkbox</type>
</CustomField>