force-app/main/default/objects/Vyuha_Formation__mdt/fields/Hour_12__c.field-meta.xml
<CustomField>
    <fullName>Hour_12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12:00</label>
    <type>Checkbox</type>
</CustomField>