force-app/main/default/objects/Vyuha_Formation__mdt/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this should be used as a Test Record</description>
    <inlineHelpText>Indicates if this should be used as a Test Record</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>