force-app/main/default/objects/Vyuha_Formation__mdt/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled Job to run Monthly</description>
    <inlineHelpText>Scheduled Job to run Monthly</inlineHelpText>
    <label>Monthly</label>
    <type>Checkbox</type>
</CustomField>