force-app/main/default/objects/Vyuha_Formation__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>List of emails to receive notification alerts</description>
    <inlineHelpText>List of emails to receive notification alerts</inlineHelpText>
    <label>Notification Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>