force-app/main/default/objects/Vyuha_Formation__mdt/fields/Soql_Statement__c.field-meta.xml
<CustomField>
    <fullName>Soql_Statement__c</fullName>
    <description>SOQL statement to initiate Formation Work</description>
    <inlineHelpText>SOQL statement to initiate Formation Work</inlineHelpText>
    <label>SOQL Statement</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>