force-app/main/default/objects/Vyuha_Formation__mdt/fields/Week_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Month__c</fullName>
    <label>Week of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Selected</fullName>
                <default>true</default>
                <label>Not Selected</label>
            </value>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>