force-app/main/default/objects/Vyuha_Formation__mdt/fields/Weekly__c.field-meta.xml
<CustomField>
    <fullName>Weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Schedule Job on a Weekly Basis</description>
    <inlineHelpText>Schedule Job on a Weekly Basis</inlineHelpText>
    <label>Weekly</label>
    <type>Checkbox</type>
</CustomField>